--- a/css/bookboard/book.css
+++ b/css/bookboard/book.css
@@ -1,20 +1,20 @@
 .booksearch {
   background-color: var(--purple);
   border-radius: 25px;
-  margin-right: 7px;
+  margin-right: 5px;
   text-align: center;
+  padding: 7px 0;
 }
 
 .takeoutbox {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   margin-top: 50px;
   background-color: var(--white);
-  padding: 0 30px;
 }
 
 .takeoutbox-left {
@@ -42,23 +42,24 @@
 }
 
 .takeoutbox-title {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .takeoutbox-title span {
-  font-size: 19px;
+  font-size: 16px;
   font-weight: 800;
 }
 
 .takeoutbox-info span {
-  font-size: 16px;
+  font-size: 13px;
 }
 
 .takeoutbox-state {
   margin-bottom: 30px;
 }
+
 .takeoutbox-state span {
-  font-size: 16px;
+  font-size: 13px;
 }
 
 .state_text {
@@ -67,11 +68,7 @@
 
 .takeoutbox-btn button {
   background-color: var(--purple);
-  font-size: 16px;
+  font-size: 12px;
   border-radius: 15px;
   padding: 5px 10px;
-}
-
-.takeout_btn {
-  margin-right: 10px;
 }
