--- a/css/bookboard/book.css
+++ b/css/bookboard/book.css
@@ -17,7 +17,7 @@
 .takeoutbox-head {
   width: 100%;
   height: 100%;
-  background-color: #fcb7a3;
+  background-color: #ffcac9;
   padding: 5px;
   padding-left: 30px;
   margin-top: 20px;
