--- a/css/bookboard/book.css
+++ b/css/bookboard/book.css
@@ -18,10 +18,11 @@
   width: 100%;
   height: 100%;
   background-color: var(--light-gray);
-  padding: 5px;
+  padding: 8px;
   padding-left: 30px;
   margin-top: 20px;
-  font-size: 13px;
+  font-size: 14px;
+  font-weight: bolder;
 }
 
 .takeoutbox {
@@ -31,9 +32,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  margin-top: 40px;
+  margin: 40px 0;
   background-color: var(--white);
-  margin-bottom: 100px;
 }
 
 .takeoutbox-left {
@@ -42,7 +42,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-right: var(--border);
+  border-right: 0.9px solid rgba(0, 0, 0, 0.2);
 }
 
 .takeoutbox-right {
@@ -69,12 +69,21 @@
   font-weight: 800;
 }
 
+.takeoutbox-info,
+.takeoutbox-state,
+.takeoutbox-count {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .takeoutbox-info span {
   font-size: 11px;
 }
 
-.takeoutbox-state {
-  margin-bottom: 30px;
+.info_slash {
+  margin: 0 5px;
 }
 
 .takeoutbox-state span {
@@ -83,6 +92,14 @@
 
 .state_text {
   color: var(--red);
+}
+
+.takeoutbox-count {
+  margin-bottom: 30px;
+}
+
+.takeoutbox-count span {
+  font-size: 11px;
 }
 
 .takeoutbox-btn button {
