--- a/css/bookboard/book.css
+++ b/css/bookboard/book.css
@@ -18,10 +18,10 @@
   width: 100%;
   height: 100%;
   background-color: var(--light-gray);
-  padding: 8px;
+  padding: 7px 0;
   padding-left: 30px;
   margin-top: 20px;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: bolder;
 }
 
