--- a/css/login_join/mypage.css
+++ b/css/login_join/mypage.css
@@ -26,7 +26,7 @@
 
 .mypage-heading-right span {
   color: gray;
-  font-size: 13px;
+  font-size: 12px;
   border-radius: 25px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 5px 7px;
@@ -126,7 +126,7 @@
   align-items: center;
   flex-wrap: wrap;
   background-color: var(--light-gray);
-  margin-top: 100px;
+  margin-top: 80px;
   padding: 30px 0;
 }
 
@@ -154,9 +154,18 @@
   object-fit: cover;
 }
 
-.mybook-date {
+.mybook-info {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+.returnbtn {
+  padding: 3px 6px;
+  background-color: var(--purple);
+  color: var(--color-text);
+  border-radius: 8px;
+  font-size: 11px;
+  margin-top: 5px;
 }
