--- a/css/freeboard/board.css
+++ b/css/freeboard/board.css
@@ -165,7 +165,7 @@
   align-items: center;
   width: 100%;
   border-bottom: var(--border);
-  padding: 8px 0;
+  padding-bottom: 8px;
 }
 
 .commentwrite {
@@ -188,7 +188,22 @@
   bottom: 10px;
   right: 5px;
   background-color: var(--purple);
-  font-size: 7px;
+  font-size: 11px;
   padding: 1px 3px;
   border-radius: 5px;
+}
+
+.commentbox_name {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 1px;
+  font-size: 7px;
+}
+
+.comment_name {
+  margin-right: 5px;
 }
