--- a/css/login_join/signup.css
+++ b/css/login_join/signup.css
@@ -1,46 +1,55 @@
 .join {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-content: center;
-  margin-top: 80px;
+  margin-top: 100px;
+  padding: 0 50px;
 }
 
 .joinform {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: center;
+  flex-direction: column;
 }
 
-.join table {
-  font-size: 16px;
-  border-collapse: separate;
-  border-spacing: 8px;
+.join_input {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 10px;
 }
 
-.join table tr,
-.join table td {
+.joinform input,
+.joinform select {
   width: 100%;
   height: 40px;
+  border: var(--border);
+  position: absolute;
+  bottom: 0;
+  font-size: 13px;
 }
 
-.join table .inputbox input,
-.join table .inputbox select {
-  background-color: var(--color-hover);
-  border-radius: 5px;
-  font-size: 16px;
-  width: 180px;
+.join_input label {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
+.join_btnbox {
+  margin-top: 20px;
+}
 .join_btn {
-  position: fixed;
-  top: 440px;
-  font-size: 14px;
-  padding: 9px 15px;
-  border-radius: 20px;
   background-color: var(--purple);
-  color: var(--color-text);
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
 }
