--- a/css/login_join/signup.css
+++ b/css/login_join/signup.css
@@ -19,13 +19,13 @@
 
 .join_input {
   width: 100%;
-  height: 70px;
+  height: 65px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
 .joinform input,
@@ -42,14 +42,18 @@
   position: absolute;
   top: 0;
   left: 0;
+  font-size: 13px;
 }
 
 .join_btnbox {
   margin-top: 20px;
 }
+
 .join_btn {
   background-color: var(--purple);
   width: 100%;
-  height: 40px;
+  height: 45px;
   border-radius: 5px;
+  font-size: 15px;
+  color: var(--color-text);
 }
