--- a/css/login_join/signup.css
+++ b/css/login_join/signup.css
@@ -32,7 +32,7 @@
 .joinform select {
   width: 100%;
   height: 40px;
-  border: var(--border);
+  border: 0.5px solid rgba(0, 0, 0, 0.2);
   position: absolute;
   bottom: 0;
   font-size: 13px;
