--- a/css/freeboard/board.css
+++ b/css/freeboard/board.css
@@ -183,16 +183,6 @@
   position: relative;
 }
 
-.commentbtn {
-  position: absolute;
-  bottom: 10px;
-  right: 5px;
-  background-color: var(--purple);
-  font-size: 11px;
-  padding: 1px 3px;
-  border-radius: 5px;
-}
-
 .commentbox_name {
   width: 100%;
   height: 100%;
@@ -206,4 +196,20 @@
 
 .comment_name {
   margin-right: 5px;
+}
+
+.commentwrite_btn {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.commentbtn {
+  background-color: var(--purple);
+  font-size: 13px;
+  padding: 1px 4px;
+  border-radius: 5px;
+  margin-left: 10px;
 }
