--- a/css/freeboard/board.css
+++ b/css/freeboard/board.css
@@ -119,7 +119,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 10px;
+  font-size: 12px;
   opacity: 80%;
 }
 
@@ -165,12 +165,13 @@
   align-items: center;
   width: 100%;
   border-bottom: var(--border);
-  padding-bottom: 8px;
+  padding-bottom: 17px;
+  padding-top: 5px;
 }
 
 .commentwrite {
   width: 100%;
-  height: 50px;
+  height: 70px;
   background-color: var(--white);
   margin-top: 10px;
   margin-bottom: 5px;
@@ -191,7 +192,7 @@
   align-items: center;
   padding-top: 8px;
   padding-bottom: 1px;
-  font-size: 7px;
+  font-size: 10px;
 }
 
 .comment_name {
@@ -208,8 +209,13 @@
 
 .commentbtn {
   background-color: var(--purple);
-  font-size: 13px;
-  padding: 1px 4px;
+  font-size: 11px;
+  padding: 1px 6px;
   border-radius: 5px;
   margin-left: 10px;
+  color: var(--color-text);
+}
+
+.commentwrite_btn #freeboard_check {
+  font-size: 11px;
 }
