--- a/css/fixed_head_foot/header.css
+++ b/css/fixed_head_foot/header.css
@@ -1,4 +1,94 @@
-header {
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--light-gray);
+  padding: 15px 25px;
+}
+
+.navbar_logo {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-family: "KOTRAHOPE";
+}
+
+.navbar_logo img {
+  width: 55px;
+  height: 55px;
+}
+
+.navbar_menu {
+  display: flex;
+  list-style: none;
+}
+
+.navbar_menu li {
+  padding: 8px 18px;
+  font-size: 18px;
+}
+
+.navbar_menu li:hover {
+  padding: 8px 18px;
+  border-radius: 10px;
+  background-color: var(--purple);
+  color: var(--color-hover);
+}
+
+.navbar_pcicon {
+  display: flex;
+  font-size: 24px;
+}
+
+.navbar_pcicon button {
+  font-size: 16px;
+  background-color: var(--purple);
+  border-radius: 10px;
+  padding: 3px 10px;
+}
+
+.navbar_icon {
+  display: none;
+  position: absolute;
+  right: 32px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  list-style: none;
+  font-size: 22px;
+}
+
+.navbar_icon li {
+  padding: 8px 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: var(--white);
+  }
+
+  .navbar_menu {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar_menu li {
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar_pcicon {
+    display: none;
+  }
+
+  .navbar_icon {
+    display: flex;
+  }
+}
+
+/* header {
   height: 55px;
   position: fixed;
   top: 0;
@@ -71,4 +161,4 @@ header .header-title {
   justify-content: center;
   align-content: center;
   flex-direction: column;
-}
+} */
