--- a/css/fixed_head_foot/footer.css
+++ b/css/fixed_head_foot/footer.css
@@ -2,12 +2,13 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 130px;
   margin-top: 100px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
 .footer .footer-box {
