--- a/css/noticeboard/notice.css
+++ b/css/noticeboard/notice.css
@@ -5,10 +5,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 15px 0;
   padding-bottom: 20px;
+  padding-top: 120px;
   background-color: var(--white);
-  margin-top: 55px;
 }
 
 .heading-box {
