--- a/css/studyboard/study.css
+++ b/css/studyboard/study.css
@@ -31,7 +31,7 @@
   width: 100%;
   height: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   padding: 0 25px;
@@ -45,6 +45,7 @@
   border-radius: 15px;
   box-shadow: var(--box-shadow);
   border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 0 20px;
 }
 
 .study-content {
