--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 55px;
+  margin-top: 120px;
 }
 
 .home-main h3 {
@@ -322,6 +322,12 @@ body {
 .book .slide .content h2 {
   font-size: 2rem;
   color: var(--black);
+}
+
+@media screen and (max-width: 768px) {
+  .home-main {
+    margin-top: 50px;
+  }
 }
 
 /* @media screen and (min-width: 768px) {
