--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,14 @@ body {
   --box-shadow: 2px 2px 10px silver;
 }
 
+.semtle {
+  padding: 0 300px;
+}
+
 .home {
   width: 100%;
   height: 350px;
+  margin-top: 120px;
 }
 
 .home-main {
@@ -85,7 +90,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 120px;
 }
 
 .home-main h3 {
@@ -325,8 +329,12 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .home-main {
+  .home {
     margin-top: 50px;
+  }
+
+  .semtle {
+    padding: 0;
   }
 }
 
